# QuaqrupedRLEnvironment

./: .gitignore  Assembly-CSharp.csproj  QuaqrupedRLEnvironment.sln  test.txt
Assets/: msgbrowser_settings.asset
Assets/Prefabs/: PendulumPrefab.prefab  base.prefab
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/Scenes/: 3DBalls.unity  QuadrupedAgentScene.unity  SampleScene.unity
Assets/Scripts/: Agent.cs
Assets/Scripts/Algo/: trainner_node.py
Assets/Scripts/RLAgent/: Agent.cs  AgentControllerBase.cs  AgentObserver.cs  AgentObserverBase.cs  AgentRewardCalculatorBase.cs  IAgentController.cs  IAgentObserver.cs
Assets/Scripts/Ros_Unity/: PublishEpisodicReward.cs  PublishEventSampleAction.cs  PublishObservationList.cs  PublishTransition.cs  (+3 more)
catkin_ws/src/RL_trainner_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/RL_trainner_pkg/logs/: events.out.tfevents.1723095018.yuxuan-Legion-Y9000P-IAH7H.850967.0  events.out.tfevents.1723606117.yuxuan-Legion-Y9000P-IAH7H.24072.0  events.out.tfevents.1723635997.yuxuan-Legion-Y9000P-IAH7H.63292.0  events.out.tfevents.1723777377.yuxuan-Legion-Y9000P-IAH7H.405416.0
catkin_ws/src/RL_trainner_pkg/models/: 100  1000  200  2000  300  3000  4000  5000  6000  7000  8000  9000
catkin_ws/src/RL_trainner_pkg/msg/: Float32IDMsg.msg  TransitionMsg.msg
catkin_ws/src/RL_trainner_pkg/scripts/: test.py  trainner_node_stableBaseline.py
catkin_ws/src/RL_trainner_pkg/scripts/RL_trainner/: ReplayBuffer.py  SAC.py  Transformer.py  actor_node.py  trainner_node.py  utils.py
catkin_ws/src/RL_trainner_pkg/srv/: ProcessArray.srv
(+17 files in other folders)
