<?xml version="1.0"?>
<package format="2">
  <name>RL_trainner_pkg</name>
  <version>0.0.0</version>
  <description>The RL_trainner_pkg package</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>

